--- a/index.html
+++ b/index.html
@@ -369,6 +369,33 @@
             margin-bottom: 2rem;
         }
 
+        .email-button-container {
+            margin-top: 2rem;
+            padding: 0 1rem;
+            display: flex;
+            justify-content: center;
+        }
+
+        .email-button {
+            display: inline-block;
+            background: linear-gradient(45deg, #ff6b6b, #ffd93d);
+            color: white;
+            padding: 15px 30px;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: bold;
+            font-size: 1.1rem;
+            transition: all 0.3s ease;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+            text-align: center;
+            word-break: break-all;
+        }
+
+        .email-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 15px 35px rgba(0,0,0,0.3);
+        }
+
         .quiero-text {
             font-size: 1.5rem;
             font-weight: bold;
@@ -568,6 +595,11 @@
                 height: 120px;
                 margin-bottom: 1.5rem;
             }
+
+            .cta-button {
+                font-size: 1rem;
+                padding: 12px 20px;
+            }
         }
     </style>
 </head>
@@ -721,25 +753,12 @@
         
         <p>📞 Llamada GRATUITA de 30 minutos - Sin compromiso</p>
         
-        <div style="margin-top: 2rem;">
-            <a href="mailto:contactosimonjadoul@gmail.com?subject=QUIERO%20-%20Llamada%20Gratuita&body=Hola%20Simon,%20QUIERO%20agendar%20mi%20llamada%20gratuita%20de%2030%20minutos." class="cta-button">📧 contactosimonjadoul@gmail.com</a>
+        <div style="margin-top: 2rem; padding: 0 1rem; display: flex; justify-content: center; align-items: center;">
+            <a href="mailto:contactosimonjadoul@gmail.com?subject=QUIERO%20-%20Llamada%20Gratuita&body=Hola%20Simon,%20QUIERO%20agendar%20mi%20llamada%20gratuita%20de%2030%20minutos." class="cta-button" style="max-width: 100%; word-break: break-word; text-align: center;">📧 contactosimonjadoul@gmail.com</a>
         </div>
     </section>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-    </script>
-</body>
-</html>
+            anchor.addEventListener('click', fu
